--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <div>git status - статус git'a</div>
 <div>git add path-to-file - добавить файл на локалку git</div>
 <div>git commit -am "comment" - добавить комментарий к изменениям</div>
+<div>git push - добавить все изменения в репозиторий</div>
